--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -15,10 +15,13 @@
         android:theme="@style/Theme.Warmindo"
         tools:targetApi="31">
         <activity
-            android:name=".DashboardActivity"
+            android:name=".DetailActivity"
             android:exported="false" />
         <activity
             android:name=".TransactionActivity"
+            android:exported="false" />
+        <activity
+            android:name=".DashboardActivity"
             android:exported="false" />
         <activity
             android:name=".MainActivity"
